--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~40.0.0",
     "expo-av": "~8.7.0",
     "expo-camera": "~9.1.0",
+    "expo-constants": "^10.0.1",
     "expo-file-system": "~9.3.0",
     "expo-image-picker": "~9.2.0",
     "expo-media-library": "^11.0.0",
